src/objects/Entitlement.object
<CustomObject>
    <fields>
        <fullName>CH_CDB_EntitlementId__c</fullName>
        <description>Change for the integration / migration to correctly link CDB Entitlement with the CDB Service offering ( entitlement_id) against the right Salesforce Entitlement Id.
This field is also used for linking the ContractLineItem-record belonging to the 1-on-1 relationship to the Entitlement-record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>CDB Entitlement ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_EntitlementType__c</fullName>
        <defaultValue>&apos;Entitled Asset&apos;</defaultValue>
        <description>Field to determine if this is a covered asset entitlement or an entitlement for authorised contacts</description>
        <label>Entitlement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entitled Asset</fullName>
                    <default>true</default>
                    <label>Entitled Asset</label>
                </value>
                <value>
                    <fullName>Authorized Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_LastFullResynchDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Full Resynch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_RecordTypeCheck__c</fullName>
        <description>To check record type for case handling project. Advantage of keeping this, whenever we have change in record type then no need to add those changes in every rule.</description>
        <formula>RecordType.DeveloperName = &apos;CH_Entitlement&apos; || RecordType.DeveloperName = &apos;HWS_Entitlement&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_ServiceMappingId__c</fullName>
        <description>Name of Entitlement Process in SF which will enable mapping.</description>
        <label>Service Mapping Id</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_ServiceMappingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_ServiceOffering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to be set by copying value from corresponding Contract Line Item</description>
        <label>Service Offering</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entitlement_Status__c</fullName>
        <formula>IF( ISBLANK(StartDate), &apos;Inactive&apos;, IF(TODAY() &lt;  StartDate, &apos;Inactive&apos;, IF ( ISBLANK( EndDate), &apos;Active&apos;, IF(TODAY() &lt;= EndDate, &apos;Active&apos;, &apos;Expired&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entitlement Status</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Entitlements</label>
    </listViews>
    <recordTypes>
        <fullName>CH_Entitlement</fullName>
        <active>true</active>
        <description>CH Entitlement</description>
        <label>CH Entitlement</label>
    </recordTypes>
    <recordTypes>
        <fullName>HWS_Entitlement</fullName>
        <active>true</active>
        <label>HWS Entitlement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>